# aread

./: GUIDE.md  INSTRUCTION-adhoc.txt  INSTRUCTION-standing.txt  LICENSE  README.md  aread_entry.py  build-exe.bat  config.toml  install.bat  pyproject.toml
.github/workflows/: build-exe.yml
src/ai_assistant_reader/: __init__.py  cli.py  config.py  lmstudio.py
